# Gazebosim-main

./: Clients  README.md  Servers  clients.cpp  servers.cpp
Buildings/Box4x4/: model.config  model.sdf
Worlds/: Basic_hallway  closed_path_test  rotation_test
client/: CMakeLists.txt  main.cpp  tags
client2/: main.cpp  net_protocol.cpp
client3/: gazebo_interface.cpp  gazebo_interface.hpp  main.cpp
parts/DJIM100/: model.config  model.sdf
parts/Fire_Extinguisher/: model.config  model.sdf
parts/IntelRealSense/: model.sdf
parts/Pi4/: model.config  model.sdf
parts/PiCam/: model.config  model.sdf
parts/PiWithSensors/: model.config  model.sdf
parts/VL53L1X/: .model.sdf.swp  model.config  model.sdf  vl531x.world
parts/emergency_exit/: model.config  model.sdf
parts/emergency_exit/materials/scripts/: emergency_exit.material
parts/quadrotor/: model.sdf
plugins/IntelRealSensePlugin/: CMakeLists.txt
plugins/building_plugin/: CMakeLists.txt  building_plugin.cpp
plugins/movement_plugin/: CMakeLists.txt  quadrotor_plugin.cpp
server/: CMakeLists.txt  gazebo_interface.hpp  known_objects.hpp  main.cpp  movement_primitives.cpp  movement_primitives.hpp  net_protocol.cpp  positioning.cpp  positioning.hpp  server.cpp  tags  tracker.cpp  tracker.hpp  vision.cpp  vision.hpp
test_platform/: CMakeLists.txt  main.cpp
